// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchProtoAll correctly parses proto files recursively 1`] = `
{
  "nested": {
    "google": {
      "nested": {
        "api": {
          "options": {
            "go_package": "google.golang.org/genproto/googleapis/api;api",
            "java_multiple_files": true,
            "java_outer_classname": "LaunchStageProto",
            "java_package": "com.google.api",
            "objc_class_prefix": "GAPI",
            "cc_enable_arenas": true
          },
          "nested": {
            "MetricDescriptor": {
              "fields": {
                "name": {
                  "type": "string",
                  "id": 1
                },
                "type": {
                  "type": "string",
                  "id": 8
                },
                "labels": {
                  "rule": "repeated",
                  "type": "LabelDescriptor",
                  "id": 2
                },
                "metricKind": {
                  "type": "MetricKind",
                  "id": 3
                },
                "valueType": {
                  "type": "ValueType",
                  "id": 4
                },
                "unit": {
                  "type": "string",
                  "id": 5
                },
                "description": {
                  "type": "string",
                  "id": 6
                },
                "displayName": {
                  "type": "string",
                  "id": 7
                },
                "metadata": {
                  "type": "MetricDescriptorMetadata",
                  "id": 10
                },
                "launchStage": {
                  "type": "LaunchStage",
                  "id": 12
                }
              },
              "nested": {
                "MetricDescriptorMetadata": {
                  "fields": {
                    "launchStage": {
                      "type": "LaunchStage",
                      "id": 1,
                      "options": {
                        "deprecated": true
                      }
                    },
                    "samplePeriod": {
                      "type": "google.protobuf.Duration",
                      "id": 2
                    },
                    "ingestDelay": {
                      "type": "google.protobuf.Duration",
                      "id": 3
                    }
                  }
                },
                "MetricKind": {
                  "values": {
                    "METRIC_KIND_UNSPECIFIED": 0,
                    "GAUGE": 1,
                    "DELTA": 2,
                    "CUMULATIVE": 3
                  }
                },
                "ValueType": {
                  "values": {
                    "VALUE_TYPE_UNSPECIFIED": 0,
                    "BOOL": 1,
                    "INT64": 2,
                    "DOUBLE": 3,
                    "STRING": 4,
                    "DISTRIBUTION": 5,
                    "MONEY": 6
                  }
                }
              }
            },
            "Metric": {
              "fields": {
                "type": {
                  "type": "string",
                  "id": 3
                },
                "labels": {
                  "keyType": "string",
                  "type": "string",
                  "id": 2
                }
              }
            },
            "LabelDescriptor": {
              "fields": {
                "key": {
                  "type": "string",
                  "id": 1
                },
                "valueType": {
                  "type": "ValueType",
                  "id": 2
                },
                "description": {
                  "type": "string",
                  "id": 3
                }
              },
              "nested": {
                "ValueType": {
                  "values": {
                    "STRING": 0,
                    "BOOL": 1,
                    "INT64": 2
                  }
                }
              }
            },
            "LaunchStage": {
              "values": {
                "LAUNCH_STAGE_UNSPECIFIED": 0,
                "EARLY_ACCESS": 1,
                "ALPHA": 2,
                "BETA": 3,
                "GA": 4,
                "DEPRECATED": 5
              }
            }
          }
        },
        "protobuf": {
          "options": {
            "csharp_namespace": "Google.Protobuf.WellKnownTypes",
            "cc_enable_arenas": true,
            "go_package": "github.com/golang/protobuf/ptypes/duration",
            "java_package": "com.google.protobuf",
            "java_outer_classname": "DurationProto",
            "java_multiple_files": true,
            "objc_class_prefix": "GPB"
          },
          "nested": {
            "Duration": {
              "fields": {
                "seconds": {
                  "type": "int64",
                  "id": 1
                },
                "nanos": {
                  "type": "int32",
                  "id": 2
                }
              }
            }
          }
        }
      }
    }
  }
}
`;

exports[`fetchProtoOnce correctly parses proto file 1`] = `
{
  "nested": {
    "google": {
      "nested": {
        "api": {
          "options": {
            "go_package": "google.golang.org/genproto/googleapis/api/metric;metric",
            "java_multiple_files": true,
            "java_outer_classname": "MetricProto",
            "java_package": "com.google.api",
            "objc_class_prefix": "GAPI"
          },
          "nested": {
            "MetricDescriptor": {
              "fields": {
                "name": {
                  "type": "string",
                  "id": 1
                },
                "type": {
                  "type": "string",
                  "id": 8
                },
                "labels": {
                  "rule": "repeated",
                  "type": "LabelDescriptor",
                  "id": 2
                },
                "metricKind": {
                  "type": "MetricKind",
                  "id": 3
                },
                "valueType": {
                  "type": "ValueType",
                  "id": 4
                },
                "unit": {
                  "type": "string",
                  "id": 5
                },
                "description": {
                  "type": "string",
                  "id": 6
                },
                "displayName": {
                  "type": "string",
                  "id": 7
                },
                "metadata": {
                  "type": "MetricDescriptorMetadata",
                  "id": 10
                },
                "launchStage": {
                  "type": "LaunchStage",
                  "id": 12
                }
              },
              "nested": {
                "MetricDescriptorMetadata": {
                  "fields": {
                    "launchStage": {
                      "type": "LaunchStage",
                      "id": 1,
                      "options": {
                        "deprecated": true
                      }
                    },
                    "samplePeriod": {
                      "type": "google.protobuf.Duration",
                      "id": 2
                    },
                    "ingestDelay": {
                      "type": "google.protobuf.Duration",
                      "id": 3
                    }
                  }
                },
                "MetricKind": {
                  "values": {
                    "METRIC_KIND_UNSPECIFIED": 0,
                    "GAUGE": 1,
                    "DELTA": 2,
                    "CUMULATIVE": 3
                  }
                },
                "ValueType": {
                  "values": {
                    "VALUE_TYPE_UNSPECIFIED": 0,
                    "BOOL": 1,
                    "INT64": 2,
                    "DOUBLE": 3,
                    "STRING": 4,
                    "DISTRIBUTION": 5,
                    "MONEY": 6
                  }
                }
              }
            },
            "Metric": {
              "fields": {
                "type": {
                  "type": "string",
                  "id": 3
                },
                "labels": {
                  "keyType": "string",
                  "type": "string",
                  "id": 2
                }
              }
            }
          }
        }
      }
    }
  }
}
`;
